@@ -64,7 +64,7 @@ ul.toc {list-style: none}
 
 <p>See the caption <a href="#public-domain-anchor">public domain anchor</a>.
 </p>
-<p>See the float <a href="#public-domain">public domain</a>.
+<p>See the float <a href="#public-domain">Copyright notice 1</a>.
 </p>
 
 <div class="float"><a name="public-domain"></a>
