@@ -56,7 +56,7 @@ ul.toc {list-style: none}
 </p></div><p><strong>1.1</strong>
 </p>
 <p>Ref to float
-<a href="#float-anchor">float anchor</a>.
+<a href="#float-anchor">1.1</a>.
 </p>
 <table class="menu" border="0" cellspacing="0">
 <tr><td align="left" valign="top"><a href="#An-anchor">An anchor</a></td><td>&nbsp;&nbsp;</td><td align="left" valign="top">                menu entry pointing to the anchor.
